--- a/index.html
+++ b/index.html
@@ -5,12 +5,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Developer Portfolio</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@800&family=Roboto:ital,wght@0,300;0,400;1,300;1,400&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <header>
-
+    <header class="header">
+        <nav>
+            <h3 class="nav-title">Fah<span class="text-primary">i</span>m</h3>
+            <ul>
+                <li><a href="">Portfolio</a></li>
+                <li><a href="">Blog</a></li>
+                <li><button class="btn-primary">Hire me</button></li>
+            </ul>
+        </nav>
+        <div class="banner">
+            <div class="banner-content">
+                <h3 class="banner-greeting">Hi,I am </h3>
+                <h1 class="banner-title">Ishtiak Anam</h1>
+                <p>Short what able cold new see hold.Friendly as an betrayed formerly he.Morning beacuse as to socity
+                    behace moments</p>
+                <button class="btn-primary">Download CV</button>
+                <buttnon class="btn-primary">Contact</buttnon>
+            </div>
+            <div>
+                <img class="profile" src="./images/fahim.png" alt="">
+            </div>
+        </div>
     </header>
     <main>
 
