--- a/index.html
+++ b/index.html
@@ -28,18 +28,147 @@
             <div class="banner-content">
                 <h3 class="banner-greeting">Hi,I am </h3>
                 <h1 class="banner-title">Ishtiak Anam</h1>
-                <p>Short what able cold new see hold.Friendly as an betrayed formerly he.Morning beacuse as to socity
+                <p class="banner-description">Short what able cold new see hold.Friendly as an betrayed formerly
+                    he.Morning <br> beacuse as to
+                    socity
                     behace moments</p>
                 <button class="btn-primary">Download CV</button>
                 <buttnon class="btn-primary">Contact</buttnon>
             </div>
             <div>
-                <img class="profile" src="./images/fahim.png" alt="">
+                <img class="profile" src="./images/fahim2.png" alt="">
             </div>
         </div>
     </header>
     <main>
+        <section class="about">
+            <h2 class="section-title">About me</h2>
+            <p class="section-description">
+                I am a designer & developer with a passion for web design.I enjoy developing simple,clean and slick
+                websites that provide real value to the end user.Thousands of clients have procured exceptional results
+                while working with me.Delivering work within time and budget which meet clients requirement in our mata.
+            </p>
+            <div class="about-info-container">
+                <!-- .about-info*4>h4.info-title+p.info-description -->
+                <div class="about-info">
+                    <h4 class="info-title">Name:</h4>
+                    <p class="info-description">Ishtiak Anam</p>
+                </div>
+                <div class="about-info">
+                    <h4 class="info-title">Email:</h4>
+                    <p class="info-description">iafahim68@gmail.com</p>
+                </div>
+                <div class="about-info">
+                    <h4 class="info-title">Date of birth:</h4>
+                    <p class="info-description">16-09-2003</p>
+                </div>
+                <div class="about-info">
+                    <h4 class="info-title">From:</h4>
+                    <p class="info-description">Rashidabad,Patiya,Chittagong</p>
+                </div>
+            </div>
+        </section>
 
+        <section class="section-container">
+            <h3 class="section-title">What I Do </h3>
+            <p class="section-description" id="what-i-do">I have more than 02 years experience building software for
+                clients all over
+                the world.Below is a quick overview of my main tachnicl skill sets and techonologies i use.Want to find
+                out more about my experience?Check out my online resume and Portfolio</p>
+            <div class="skill-container">
+                <!-- .skill*4>img+h3.skill-title+p.skill-description -->
+                <div class="skill">
+                    <img src="images/icons/js.png" alt="">
+                    <h3 class="skill-title">Vanilla Javascript</h3>
+                    <p class="skill-description">Lish skill/tachnologies here.You can change the icon above to any of
+                        the 1500+ FontAwesome 5 free icons available.Aeneam commodo ligula eget dolar</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/react.png" alt="">
+                    <h3 class="skill-title">React</h3>
+                    <p class="skill-description">Lish skill/tachnologies here.You can change the icon above to any of
+                        the 1500+ FontAwesome 5 free icons available.Aeneam commodo ligula eget dolar</p>
+                </div>
+                <div class="skill">
+                    <img src="./images/icons/nodejs.png" alt="">
+                    <h3 class="skill-title">Node Js</h3>
+                    <p class="skill-description">Lish skill/tachnologies here.You can change the icon above to any of
+                        the 1500+ FontAwesome 5 free icons available.Aeneam commodo ligula eget dolar</p>
+                </div>
+                <div class="skill">
+                    <img src="./images/icons/mongo.png" alt="">
+                    <h3 class="skill-title">MongoDB</h3>
+                    <p class="skill-description">Lish skill/tachnologies here.You can change the icon above to any of
+                        the 1500+ FontAwesome 5 free icons available.Aeneam commodo ligula eget dolar</p>
+                </div>
+
+            </div>
+        </section>
+
+        <section>
+            <h3 class="section-title">A summary of my Resume</h3>
+            <div class="resume-container">
+                <div class="resume-column">
+                    <div class="resume-column">
+                        <h3 class="resume-column-title">My Education</h3>
+
+                        <div class="resume-item">
+                            <h2 class="resume-item-title">Masters In MBA</h2>
+                            <h3 class="resume-item-institute">BGC Trust University</h3>
+                            <p class="resume-item-description">Lish skill/tachnologies here.You can change the icon
+                                above to any of
+                                the 1500+ FontAwesome 5 free icons available.Aeneam commodo ligula eget dolar</p>
+                        </div>
+                        <hr>
+                        <div class="resume-item">
+                            <h2 class="resume-item-title">Masters In MBA</h2>
+                            <h3 class="resume-item-institute">BGC Trust University</h3>
+                            <p class="resume-item-description">Lish skill/tachnologies here.You can change the icon
+                                above to any of
+                                the 1500+ FontAwesome 5 free icons available.Aeneam commodo ligula eget dolar</p>
+                        </div>
+                        <hr>
+                        <div class="resume-item">
+                            <h2 class="resume-item-title">Masters In MBA</h2>
+                            <h3 class="resume-item-institute">BGC Trust University</h3>
+                            <p class="resume-item-description">Lish skill/tachnologies here.You can change the icon
+                                above to any of
+                                the 1500+ FontAwesome 5 free icons available.Aeneam commodo ligula eget dolar</p>
+                        </div>
+
+
+                    </div>
+                    <div class="resume-column">
+                        <h3 class="resume-column-title">My Experience</h3>
+
+                        <div class="resume-item">
+                            <h2 class="resume-item-title">Masters In MBA</h2>
+                            <h3 class="resume-item-institute">BGC Trust University</h3>
+                            <p class="resume-item-description">Lish skill/tachnologies here.You can change the icon
+                                above to any of
+                                the 1500+ FontAwesome 5 free icons available.Aeneam commodo ligula eget dolar</p>
+                        </div>
+                        <hr>
+                        <div class="resume-item">
+                            <h2 class="resume-item-title">Masters In MBA</h2>
+                            <h3 class="resume-item-institute">BGC Trust University</h3>
+                            <p class="resume-item-description">Lish skill/tachnologies here.You can change the icon
+                                above to any of
+                                the 1500+ FontAwesome 5 free icons available.Aeneam commodo ligula eget dolar</p>
+                        </div>
+                        <hr>
+                        <div class="resume-item">
+                            <h2 class="resume-item-title">Masters In MBA</h2>
+                            <h3 class="resume-item-institute">BGC Trust University</h3>
+                            <p class="resume-item-description">Lish skill/tachnologies here.You can change the icon
+                                above to any of
+                                the 1500+ FontAwesome 5 free icons available.Aeneam commodo ligula eget dolar</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- <div class="resume-col"></div> -->
+            </div>
+        </section>
     </main>
     <footer>
 
