--- a/index.html
+++ b/index.html
@@ -109,69 +109,83 @@
             <h3 class="section-title">A summary of my Resume</h3>
             <div class="resume-container">
                 <div class="resume-column">
-                    <div class="resume-column">
-                        <h3 class="resume-column-title">My Education</h3>
+                    <h3 class="resume-column-title">My Education</h3>
 
-                        <div class="resume-item">
-                            <h2 class="resume-item-title">Masters In MBA</h2>
-                            <h3 class="resume-item-institute">BGC Trust University</h3>
-                            <p class="resume-item-description">Lish skill/tachnologies here.You can change the icon
-                                above to any of
-                                the 1500+ FontAwesome 5 free icons available.Aeneam commodo ligula eget dolar</p>
-                        </div>
-                        <hr>
-                        <div class="resume-item">
-                            <h2 class="resume-item-title">Masters In MBA</h2>
-                            <h3 class="resume-item-institute">BGC Trust University</h3>
-                            <p class="resume-item-description">Lish skill/tachnologies here.You can change the icon
-                                above to any of
-                                the 1500+ FontAwesome 5 free icons available.Aeneam commodo ligula eget dolar</p>
-                        </div>
-                        <hr>
-                        <div class="resume-item">
-                            <h2 class="resume-item-title">Masters In MBA</h2>
-                            <h3 class="resume-item-institute">BGC Trust University</h3>
-                            <p class="resume-item-description">Lish skill/tachnologies here.You can change the icon
-                                above to any of
-                                the 1500+ FontAwesome 5 free icons available.Aeneam commodo ligula eget dolar</p>
-                        </div>
-
-
+                    <div class="resume-item">
+                        <h2 class="resume-item-title">Masters In MBA</h2>
+                        <h3 class="resume-item-institute">BGC Trust University</h3>
+                        <p class="resume-item-description">Lish skill/tachnologies here.You can change the icon
+                            above to any of
+                            the 1500+ FontAwesome 5 free icons available.Aeneam commodo ligula eget dolar</p>
                     </div>
-                    <div class="resume-column">
-                        <h3 class="resume-column-title">My Experience</h3>
+                    <hr>
+                    <div class="resume-item">
+                        <h2 class="resume-item-title">Masters In MBA</h2>
+                        <h3 class="resume-item-institute">BGC Trust University</h3>
+                        <p class="resume-item-description">Lish skill/tachnologies here.You can change the icon
+                            above to any of
+                            the 1500+ FontAwesome 5 free icons available.Aeneam commodo ligula eget dolar</p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                        <h2 class="resume-item-title">Masters In MBA</h2>
+                        <h3 class="resume-item-institute">BGC Trust University</h3>
+                        <p class="resume-item-description">Lish skill/tachnologies here.You can change the icon
+                            above to any of
+                            the 1500+ FontAwesome 5 free icons available.Aeneam commodo ligula eget dolar</p>
+                    </div>
 
-                        <div class="resume-item">
-                            <h2 class="resume-item-title">Masters In MBA</h2>
-                            <h3 class="resume-item-institute">BGC Trust University</h3>
-                            <p class="resume-item-description">Lish skill/tachnologies here.You can change the icon
-                                above to any of
-                                the 1500+ FontAwesome 5 free icons available.Aeneam commodo ligula eget dolar</p>
-                        </div>
-                        <hr>
-                        <div class="resume-item">
-                            <h2 class="resume-item-title">Masters In MBA</h2>
-                            <h3 class="resume-item-institute">BGC Trust University</h3>
-                            <p class="resume-item-description">Lish skill/tachnologies here.You can change the icon
-                                above to any of
-                                the 1500+ FontAwesome 5 free icons available.Aeneam commodo ligula eget dolar</p>
-                        </div>
-                        <hr>
-                        <div class="resume-item">
-                            <h2 class="resume-item-title">Masters In MBA</h2>
-                            <h3 class="resume-item-institute">BGC Trust University</h3>
-                            <p class="resume-item-description">Lish skill/tachnologies here.You can change the icon
-                                above to any of
-                                the 1500+ FontAwesome 5 free icons available.Aeneam commodo ligula eget dolar</p>
-                        </div>
+
+                </div>
+                <div class="resume-column">
+                    <h3 class="resume-column-title">My Experience</h3>
+
+                    <div class="resume-item">
+                        <h2 class="resume-item-title">Masters In MBA</h2>
+                        <h3 class="resume-item-institute">BGC Trust University</h3>
+                        <p class="resume-item-description">Lish skill/tachnologies here.You can change the icon
+                            above to any of
+                            the 1500+ FontAwesome 5 free icons available.Aeneam commodo ligula eget dolar</p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                        <h2 class="resume-item-title">Masters In MBA</h2>
+                        <h3 class="resume-item-institute">BGC Trust University</h3>
+                        <p class="resume-item-description">Lish skill/tachnologies here.You can change the icon
+                            above to any of
+                            the 1500+ FontAwesome 5 free icons available.Aeneam commodo ligula eget dolar</p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                        <h2 class="resume-item-title">Masters In MBA</h2>
+                        <h3 class="resume-item-institute">BGC Trust University</h3>
+                        <p class="resume-item-description">Lish skill/tachnologies here.You can change the icon
+                            above to any of
+                            the 1500+ FontAwesome 5 free icons available.Aeneam commodo ligula eget dolar</p>
                     </div>
                 </div>
+
                 <!-- <div class="resume-col"></div> -->
+            </div>
+            <div class="download-cv">
+                <button class="btn-primary">Download CV</button>
             </div>
         </section>
     </main>
     <footer>
-
+        <div class="footer-column">
+            <h3 class="section-title">Lets Connect</h3>
+            <p class="section-description">Please fill out the form on this section to contact with me or call between
+                9:00 A.M and 8:00 P.M ET, Monday though Friday</p>
+            <div class="social-links">
+                <a href=""><img src="./images/icons/facebook.png" alt=""></a>
+                <a href=""><img src="./images/icons/twitter.png" alt=""></a>
+                <a href=""><img src="./images/icons/insta.png" alt=""></a>
+            </div>
+        </div>
+        <div class="footer-column">
+            <h3 class="section-title">Let's Message me</h3>
+        </div>
     </footer>
 </body>
 
