--- a/index.html
+++ b/index.html
@@ -185,6 +185,12 @@
         </div>
         <div class="footer-column">
             <h3 class="section-title">Let's Message me</h3>
+            <form class="contact" action="">
+                <input type="text" placeholder="Your Name">
+                <input type="email" name="" placeholder="Your email" id="">
+                <textarea name="" id="" placeholder="Massage" cols="30" rows="10"></textarea>
+                <input class="btn-primary" type="submit" value="submit">
+            </form>
         </div>
     </footer>
 </body>
